fix font on iphone?

--- a/apps/assets/stylus/default.styl
+++ b/apps/assets/stylus/default.styl
@@ -2,19 +2,18 @@
 
 // Fonts
 
+/* freckle-face-regular - latin */
 @font-face
   font-family 'Freckle Face'
   font-style normal
   font-weight 400
-  src local('Freckle Face'), local('FreckleFace-Regular'), url(/fonts/freckle-face/freckleface-latin-ext.woff2) format('woff2')
-  unicode-range U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF
-
-@font-face
-  font-family 'Freckle Face'
-  font-style normal
-  font-weight 400
-  src local('Freckle Face'), local('FreckleFace-Regular'), url(/fonts/freckle-face/freckleface-latin.woff2) format('woff2')
-  unicode-range U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000
+  src url('/fonts/freckle-face-v4-latin/freckle-face-v4-latin-regular.eot') // IE9 Compat Modes
+  src local('Freckle Face'), local('FreckleFace-Regular'),
+       url('/fonts/freckle-face-v4-latin/freckle-face-v4-latin-regular.eot?#iefix') format('embedded-opentype'), // IE6-IE8
+       url('/fonts/freckle-face-v4-latin/freckle-face-v4-latin-regular.woff2') format('woff2'), // Super Modern Browsers
+       url('/fonts/freckle-face-v4-latin/freckle-face-v4-latin-regular.woff') format('woff'), // Modern Browsers
+       url('/fonts/freckle-face-v4-latin/freckle-face-v4-latin-regular.ttf') format('truetype'), // Safari, Android, iOS
+       url('/fonts/freckle-face-v4-latin/freckle-face-v4-latin-regular.svg#FreckleFace') format('svg') // Legacy iOS
 
 // HTML elements
 
